--- a/web/src/paste.css
+++ b/web/src/paste.css
@@ -6,8 +6,23 @@ p {
 	word-wrap: break-word;
 }
 
+@media (max-width: 399px) {
+	article .paste {
+		font-size: 13px !important;
+		min-width: 100% !important;
+		width: 100% !important;
+	}
+}
+
+
 /* Mobile styles */
 @media (max-width: 1158px) {
+
+	.extra {
+		flex-direction: column;
+		gap: 10px;
+	}
+
 	body {
 		font-size: 10px;
 		/* Smaller font size for mobile */
@@ -19,15 +34,21 @@ p {
 		/* side-content above main */
 	}
 
-
 	.side-content {
-		display: flex;
-		flex-direction: column;
+		width: 100% !important;
+		flex-direction: column !important;
+		padding-top: 10px !important;
 	}
+
 }
 
 /* Desktop and larger tablets */
 @media (min-width: 1159px) {
+
+	.extra {
+		flex-direction: column;
+	}
+
 	body {
 		font-size: 12px;
 		/* Regular font size for larger devices */
@@ -71,13 +92,14 @@ main,
 .extra {
 	width: 200px;
 	font-size: 14px;
+	user-select: none !important;
 }
 
 .side-content {
 	display: flex;
 	flex-direction: row;
 	align-items: flex-start;
-	gap: 20px;
+	/* gap: 20px; */
 }
 
 * {
@@ -239,4 +261,20 @@ span.img-item {
 	/* Change this to the desired height */
 	/* background-size: 344px 1032px; */
 	/* Adjust the background size to 'auto' */
+}
+
+#wrapper {
+	user-select: none;
+	width: 100%;
+	/* Adjust the width as necessary, could be 100% or a specific value like 35vw */
+	max-width: 35vw;
+	/* Prevents the container from exceeding the bounds of its parent */
+	height: 25px;
+	/* Fixed height as you've already specified */
+	max-height: 25px;
+	/* Ensures container does not grow taller than this */
+	overflow: hidden;
+	/* Adds scrollbars if content exceeds container size */
+	margin: 0 auto;
+	/* Centers the container if within a block that's wider than the container itself */
 }
