--- a/web/src/paste.css
+++ b/web/src/paste.css
@@ -30,14 +30,13 @@ p {
 
 	.content-container {
 		display: flex;
-		flex-direction: column-reverse;
+		flex-direction: column;
 		/* side-content above main */
 	}
 
 	.side-content {
 		width: 100% !important;
 		flex-direction: column !important;
-		padding-top: 10px !important;
 	}
 
 }
@@ -87,6 +86,10 @@ img.img-pokemon {
 main,
 .side-content {
 	margin: 0;
+}
+
+.side-content {
+	padding-top: 20px !important;
 }
 
 .extra {
