--- a/web/solid/src/paste.css
+++ b/web/solid/src/paste.css
@@ -34,7 +34,7 @@ p {
 	}
 
 	body {
-		font-size: 10px;
+		font-size: 100%;
 		/* Smaller font size for mobile */
 	}
 
@@ -49,6 +49,19 @@ p {
 		flex-direction: column !important;
 	}
 
+    article>.paste {
+        max-width: 350px;
+    }
+
+}
+
+img.img-pokemon {
+    max-width: 180px;
+    /* max-width: 200px; */
+    min-width: 150px;
+    width: 15vw;
+    height: auto;
+    margin-left: 15px;
 }
 
 /* Desktop and larger tablets */
@@ -59,7 +72,7 @@ p {
 	}
 
 	body {
-		font-size: 12px;
+        font-size: 100%;
 		/* Regular font size for larger devices */
 	}
 
@@ -69,29 +82,33 @@ p {
 		/* main above side-content */
 	}
 
+    article>.paste {
+        max-width: 450px;
+    }
+    /* img.img-pokemon { */
+    /*     max-width: 300px; */
+    /*     min-width: 150px; */
+    /*     width: 14vw; */
+    /*  height: auto; */
+    /* } */
+
 }
 
-img.img-pokemon {
-	/* width: 12vw; */
-	/* min-width: 150px; */
-	height: auto;
-	/* max-width: 250px; */
-	width: 150px;
-}
+/* img.img-pokemon { */
+/* 	min-width: 150px; */
+/* 	height: auto; */
+/* 	max-width: 300px; */
+/*     width: 13vw; */
+/* } */
 
 body {
 	margin: 0;
 	background-color: black !important;
     /*@apply bg-zinc-900;*/
 	color: white;
-	font:
-		12px "M+ 1c",
-		sans-serif;
-}
-
-/* Common styles for all devices */
-img.img-pokemon {
-	height: auto;
+	/* font: */
+	/* 	12px "M+ 1c", */
+	/* 	sans-serif; */
 }
 
 main,
@@ -105,8 +122,8 @@ main,
 
 .extra {
 	width: 200px;
-	font-size: 14px;
 	user-select: none !important;
+    margin-top: 10px;
 }
 
 /*.side-content {*/
@@ -243,12 +260,13 @@ article:nth-child(odd) {
 }
 
 article>.paste {
-	min-width: 400px;
-	width: 25vw;
-	margin: 10px 10px 0;
+	min-width: 335px;
+    width: 25vw;
+    /*max-width: 300px;*/
+    margin: 2px 5px 0;
 	/*font: 15px;*/
     font-size: 1rem;
-    line-height: 1.15rem;
+    line-height: 1.3rem;
     /*font-family: monospace;*/
     font-family: 'Ubuntu Mono', monospace;
     font-weight: 400;
@@ -265,7 +283,7 @@ article {
 
 div.img {
 	position: relative;
-	margin-left: 15px;
+	margin-left: 0px;
 	user-select: none;
 	-webkit-user-select: none;
 	-moz-user-select: none;
@@ -299,4 +317,40 @@ span.img-item {
 	/* Adds scrollbars if content exceeds container size */
 	margin: 0 auto;
 	/* Centers the container if within a block that's wider than the container itself */
+}
+
+
+.patreon-button {
+    box-shadow: 1px 1px 0px rgba(0, 0, 0, 0.2);
+    line-height: 36px !important;
+    min-width: 190px;
+    max-width: 190px;
+    display: flex !important; /* Changed to flex and kept !important */
+    align-items: center; /* Ensure items are vertically centered */
+    background-color: #6366f1;
+    padding-left: 0.5rem;
+    padding-right: 0.5rem;
+    text-align: center !important;
+    border-radius: 7px;
+    color: #fff;
+    cursor: pointer;
+    overflow-wrap: break-word;
+    vertical-align: middle;
+    border: 0 none #fff !important;
+    font-family:
+        "Quicksand",
+        Helvetica,
+        Century Gothic,
+        sans-serif !important;
+    text-decoration: none;
+    text-shadow: none;
+    font-weight: 700 !important;
+    font-size: 0.875rem;
+    line-height: 1.25rem;
+}
+
+.patreon-button:hover {
+    opacity: 0.85;
+    color: #f5f5f5 !important;
+    text-decoration: none !important;
 }
