--- a/web/src/paste.css
+++ b/web/src/paste.css
@@ -274,19 +274,22 @@ span.img-item {
   position: relative;
   display: flex;
   justify-content: space-between;
-  max-width: 1600px;
+  max-width: 100%;
   overflow-x: hidden;
   margin: 0 auto;
   padding: 0 10px;
 }
 
 main {
-  max-width: 1600px;
+  max-width: 1800px;
   flex: 1;
   margin-right: 20px;
   overflow-x: visible;
   z-index: 1;
   min-width: 0;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 0 25px;
 }
 
 .side-content {
