Clean up stylings

--- a/web/src/paste.css
+++ b/web/src/paste.css
@@ -11,7 +11,6 @@ body {
     -webkit-font-smoothing: auto;
     -moz-osx-font-smoothing: auto;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen-Sans, Ubuntu, Cantarell, 'Helvetica Neue', sans-serif;
-    font-size: 100%;
 }
 
 * {
@@ -42,7 +41,6 @@ main,
 main {
     max-width: 100%;
     flex: 1;
-    margin-right: 20px;
     overflow-x: visible;
     z-index: 1;
     min-width: 0;
@@ -79,14 +77,13 @@ article:nth-child(odd) {
 }
 
 article > .paste {
-    min-width: 390px !important;
-    width: calc(100% - 220px);
-    /* font-size: 15px "M+ 1m", monospace; */
-    font-size: 16px;
+    min-width: 390!important;
+    width: 50%;
+    font-size: 14px;
     line-height: 1.10rem;
     font-family: monospace;
     font-optical-sizing: auto;
-    /* font-weight: 400; */
+    font-weight: 400;
     font-style: normal;
 }
 
@@ -100,8 +97,14 @@ div.img {
     -ms-user-select: none;
 }
 
+img.img-pokemon {
+    width: 180px;
+    height: auto;
+    margin-left: 0px;
+}
+
 .img {
-    margin-right: 5px;
+    margin-right: 10px;
 }
 
 img.img-pokemon {
@@ -341,6 +344,11 @@ span.img-item {
     }
 }
 
+#mon_title {
+    line-height: "1rem";
+    font-weight: 600 !important;
+}
+
 @media (max-width: 399px) {
     main {
         margin-left: 0px;
@@ -353,6 +361,20 @@ span.img-item {
     }
 
     article > .paste {
+        font-size: 16px !important;
+        min-width: 100% !important;
+        width: 100% !important;
+    }
+
+
+    .metadata, .notes-section, .extra {
+        width: 100%;
+        max-width: none;
+    }
+}
+
+@media (max-width: 399px) {
+    article .paste {
         font-size: 16px !important;
         min-width: 100% !important;
         width: 100% !important;
